# dj-conjure

./: README.md  cookiecutter.json  pyproject.toml
src/dj_conjure/: __init__.py
{{cookiecutter.project.slug}}/: conftest.py  justfile  pyproject.toml
{{cookiecutter.project.slug}}/config/: settings.py  urls.py
{{cookiecutter.project.slug}}/static/: app.css
{{cookiecutter.project.slug}}/templates/: base.html  error_base.html
{{cookiecutter.project.slug}}/{{cookiecutter.project.slug}}/: checks.py  templatetags.py  views.py
{{cookiecutter.project.slug}}/{{cookiecutter.project.slug}}/tests/: test_checks.py  test_middleware.py  test_templatetags.py  test_views.py
{{cookiecutter.project.slug}}/{{cookiecutter.project.slug}}/users/: admin.py  apps.py  models.py
{{cookiecutter.project_slug}}/: Dockerfile  README.md  SECURITY.md  conftest.py  justfile  pyproject.toml  tailwind.config.js
{{cookiecutter.project_slug}}/.github/workflows/: checks.yml  default.yml
{{cookiecutter.project_slug}}/config/: settings.py  urls.py
{{cookiecutter.project_slug}}/static/: app.css  offline.html
{{cookiecutter.project_slug}}/templates/: 400.html  403.html  403_csrf.html  404.html  405.html  429.html  500.html  about.html  base.html  error_base.html  index.html  privacy.html  service_worker.js
{{cookiecutter.project_slug}}/templates/components/: cookie_banner.html  form.html  messages.html
{{cookiecutter.project_slug}}/templates/components/form/: buttons.html  (+5 more)
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: checks.py  middleware.py  templatetags.py  views.py
(+16 files in other folders)
