[project]
name = "dj-conjure"
version = "0.1.0"
description = "Cookiecutter Django project generator"
readme = "README.md"
authors = [
    { name = "Dan Jacob", email = "danjac2018@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
